add tcp scripts, tcp client can conenct to basic server now

--- a/Server/Makefile
+++ b/Server/Makefile
@@ -13,8 +13,8 @@ RMIInterface.jar: Server/Interface/IResourceManager.java
 	javac Server/Interface/IResourceManager.java
 	jar cvf RMIInterface.jar Server/Interface/IResourceManager.class
 
-compile-server-rmi: Server/RMI/*.java Server/Interface/IResourceManager.java Server/Common/*.java
-	javac Server/RMI/*.java Server/Interface/IResourceManager.java Server/Common/*.java
+compile-server-rmi: Server/TCP/*.java Server/RMI/*.java Server/Interface/IResourceManager.java Server/Common/*.java
+	javac Server/TCP/*.java Server/RMI/*.java Server/Interface/IResourceManager.java Server/Common/*.java
 
 clean:
 	rm -f Server/Interface/*.class Server/Common/*.class Server/RMI/*.class
