Sort of works at running arbitrary Client strings

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.19</version>
+        <configuration>
+          <systemProperties>
+            <java.security.policy>java.policy</java.security.policy>
+            <java.rmi.server.codebase>file:src/main/java/</java.rmi.server.codebase>
+          </systemProperties>
+        </configuration>
         <dependencies>
           <dependency>
             <groupId>org.junit.platform</groupId>
